--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.23",
+    "vite": "^4.3.4"
+
   },
   "eslintConfig": {
     "root": true,
